[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/niveis.gd" type="Script" id=1]
[ext_resource path="res://sprites/caminho.png" type="Texture" id=2]
[ext_resource path="res://sprites/menino.png" type="Texture" id=3]
[ext_resource path="res://scripts/sexo.gd" type="Script" id=4]
[ext_resource path="res://sprites/nivel.png" type="Texture" id=5]
[ext_resource path="res://sprites/nivel-bloq.png" type="Texture" id=6]
[ext_resource path="res://scenes/poupanca.tscn" type="PackedScene" id=7]
[ext_resource path="res://music/click.ogg" type="AudioStream" id=8]
[ext_resource path="res://sprites/voltar.png" type="Texture" id=9]
[ext_resource path="res://sprites/voltar-press.png" type="Texture" id=10]
[ext_resource path="res://sprites/Bloja.png" type="Texture" id=11]
[ext_resource path="res://sprites/loja-bloq.png" type="Texture" id=12]
[ext_resource path="res://sprites/perg.png" type="Texture" id=13]
[ext_resource path="res://fontes/nivel2.fnt" type="BitmapFont" id=14]
[ext_resource path="res://fontes/nivel1.fnt" type="BitmapFont" id=15]
[ext_resource path="res://sprites/b3.png" type="Texture" id=16]
[ext_resource path="res://music/audio-fundo.ogg" type="AudioStream" id=17]

[sub_resource type="Animation" id=1]

resource_name = "n1"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 154.396, 1039.02 ), Vector2( 126, 982 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.15, 0.15 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "n2"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 389.859, 948.927 ), Vector2( 357.347, 891.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.15, 0.15 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "n3"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 508.292, 846.34 ), Vector2( 476.975, 786.301 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.15, 0.15 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "n4"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 312.924, 744.274 ), Vector2( 279.797, 685.502 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.15, 0.15 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "n5"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.15, 0.15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 581.806, 767.756 ), Vector2( 547.828, 706.277 ) ]
}

[node name="caminho" type="Node"]

script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="."]

position = Vector2( 0, -1.95021 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 126, 982 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 4 )

[node name="Nivel1" type="TouchScreenButton" parent="."]

position = Vector2( 126, 1061 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Nivel2" type="TouchScreenButton" parent="."]

position = Vector2( 368.209, 979.185 )
scale = Vector2( 0.16, 0.16 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Nivel3" type="TouchScreenButton" parent="."]

position = Vector2( 496.223, 879.319 )
scale = Vector2( 0.14, 0.14 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Nivel4" type="TouchScreenButton" parent="."]

position = Vector2( 302.609, 778.195 )
scale = Vector2( 0.13, 0.13 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Nivel5" type="TouchScreenButton" parent="."]

position = Vector2( 573.468, 800.956 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = true
action = ""
visibility_mode = 0

[node name="Anim" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/n1 = SubResource( 1 )
anims/n2 = SubResource( 2 )
anims/n3 = SubResource( 3 )
anims/n4 = SubResource( 4 )
anims/n5 = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer1" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="Timer2" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="Timer3" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="poupanca" parent="." instance=ExtResource( 7 )]


[node name="click" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 8 )
playing = false
loop = false
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="menu" type="TouchScreenButton" parent="."]

position = Vector2( 590, 59 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="loja" type="TouchScreenButton" parent="."]

position = Vector2( 558.673, 1121.59 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 11 )
pressed = ExtResource( 12 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="mediacao" type="Node" parent="."]


[node name="sombra" type="ColorFrame" parent="mediacao"]

visible = false
visibility/opacity = 0.8
focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 0.0
margin_top = 0.0
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0, 0, 0, 1 )

[node name="fundo" type="Sprite" parent="mediacao"]

visible = false
position = Vector2( 33, 368 )
scale = Vector2( 0.68, 0.68 )
texture = ExtResource( 13 )
centered = false

[node name="titulo" type="Label" parent="mediacao"]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 47.0
margin_top = 433.0
margin_right = 666.0
margin_bottom = 534.0
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Alerta"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="texto" type="Label" parent="mediacao"]

visible = false
focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 131.0
margin_top = 505.0
margin_right = 585.0
margin_bottom = 722.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Infelizmente, este nível está bloqueado."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok" type="TouchScreenButton" parent="mediacao"]

visible = false
position = Vector2( 274, 721 )
normal = ExtResource( 16 )
pressed = ExtResource( 16 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="buttom" type="Label" parent="mediacao/ok"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 1.0
margin_top = 8.0
margin_right = 160.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0.121094, 0.118256, 0.118256, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "OK"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="mediacao"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="mFundo" type="AudioStreamPlayer" parent="."]

stream = null
playing = false
loop = true
volume_db = 0.0
stream_autoplay = true
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="StreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 17 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = true
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[connection signal="pressed"  from="Nivel1"  to="." method="_on_Nivel1_pressed" binds=[  ]]

[connection signal="pressed"  from="Nivel2"  to="." method="_on_Nivel2_pressed" binds=[  ]]

[connection signal="pressed"  from="Nivel3"  to="." method="_on_Nivel3_pressed" binds=[  ]]

[connection signal="pressed"  from="Nivel4"  to="." method="_on_Nivel4_pressed" binds=[  ]]

[connection signal="pressed"  from="Nivel5"  to="." method="_on_Nivel5_pressed" binds=[  ]]

[connection signal="pressed"  from="menu"  to="." method="_on_menu_pressed" binds=[  ]]

[connection signal="pressed"  from="loja"  to="." method="_on_loja_pressed" binds=[  ]]

[connection signal="pressed"  from="mediacao/ok"  to="." method="_on_ok_pressed" binds=[  ]]
